--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>The Game</title>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="phaser.min.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="game.js"></script>
   </body>
 </html>
