--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>The Game</title>
+    <meta charset="UTF-8">
+    <title>Jumper - written with Phaser 2</title>
     <script type="text/javascript" src="phaser.js"></script>
   </head>
-  <body>
-    <script type="text/javascript" src="game.js"></script>
-  </body>
+  <body><script type="text/javascript" src="game.js"></script></body>
 </html>
