--- a/GameBeta/game.html
+++ b/GameBeta/game.html
@@ -4,7 +4,7 @@
 </div>
 
 <canvas id="canvas">
-
-<script src="javasript.js"></script>
+<script type="text/javascript" src="map1.js"></script>
+<script type="text/javascript" src="javasript.js"></script>
 
 </canvas>
