New engine(check prototype folder)
Naujas engine + backround

--- a/GameBeta/game.html
+++ b/GameBeta/game.html
@@ -5,6 +5,7 @@
 
 <canvas id="canvas">
 <script type="text/javascript" src="map1.js"></script>
+<script type="text/javascript" src="map2.js"></script>
 <script type="text/javascript" src="javasript.js"></script>
 
 </canvas>
