--- a/PROTOTYPE/index.html
+++ b/PROTOTYPE/index.html
@@ -91,6 +91,7 @@
                 { id: 9, colour: '#C93232', solid: 0, script: 'death' },
                 { id: 10, colour: '#555', solid: 1 },
                 { id: 11, colour: '#0FF', solid: 0, script: 'unlock' }
+                {id: 13, colour: '#000'}
             ],
 
             /* An array representing the map tiles. Each number corresponds to a key */
