--- a/PROTOTYPE/index.html
+++ b/PROTOTYPE/index.html
@@ -91,7 +91,8 @@
                 { id: 9, colour: '#C93232', solid: 0, script: 'death' },
                 { id: 10, colour: '#555', solid: 1 },
                 { id: 11, colour: '#0FF', solid: 0, script: 'unlock' },
-                { id: 12, colour: '#333', solid: 0 }
+                { id: 12, colour: 'black', solid: 0 }
+                { id: 13, colour: 'black', solid: 0 }
             ],
 
             /* An array representing the map tiles. Each number corresponds to a key */
