--- a/PROTOTYPE/index.html
+++ b/PROTOTYPE/index.html
@@ -90,9 +90,7 @@
                 { id: 8, colour: '#FADF73', solid: 0, script: 'next_level' },
                 { id: 9, colour: '#C93232', solid: 0, script: 'death' },
                 { id: 10, colour: '#555', solid: 1 },
-                { id: 11, colour: '#0FF', solid: 0, script: 'unlock' },
-                { id: 12, colour: 'black', solid: 0 }
-                { id: 13, colour: 'black', solid: 0 }
+                { id: 11, colour: '#0FF', solid: 0, script: 'unlock' }
             ],
 
             /* An array representing the map tiles. Each number corresponds to a key */
@@ -226,7 +224,7 @@
         /* Start */
 
         Loop();
-        var boob;
+        //var boob;
 
     </script>
 </body>
