Added scale and tested if tiles work independetly

--- a/PROTOTYPE/index.html
+++ b/PROTOTYPE/index.html
@@ -215,6 +215,9 @@
             ctx.fillStyle = '#333';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+            //Score counter
+
+
             game.update();
             game.draw(ctx);
 
