--- a/PROTOTYPE/index.html
+++ b/PROTOTYPE/index.html
@@ -11,12 +11,12 @@
     <script type="text/javascript" src="Clarity.js"></script>
 </head>
 
-<body onload="HideShowGame()">
+<body onload="HideShowGame();HideShowStart()">
 
 	<div id="AllButtons">
 	
 	<div id="StartButton" class="text-center">
-    <button id="green play" style="margin-left:auto;margin-right" onclick="LoadWholeGame();HideShowGame();HideAllButtons();win.play()">
+    <button id="green play" style="margin-left:auto;margin-right" onclick="HideAllButtons();HideShowStart()">
         Start
     </button>
 	</div>
@@ -29,6 +29,20 @@
 	
 	</div>
 	
+	<div id="Start">
+	<button class="" onclick="LoadWholeGame();HideShowGame();HideShowStart();win.play()">
+        Level 1
+    </button>
+	<button onclick="LoadWholeGame();HideShowGame();HideShowStart()">
+        Level 2
+    </button>
+		<button onclick="LoadWholeGame();HideShowGame();HideShowStart()">
+        Level 3
+    </button>
+		<button onclick="LoadWholeGame();HideShowGame();HideShowStart()">
+        Level 4
+    </button>
+	</div>
 	
 
 <div id="gamecontainer">
@@ -36,7 +50,7 @@
 	
 <!--
     <p>
-
+		win.play()
         Use the left, right and up arrow keys to move.
 
     </p>
@@ -56,7 +70,7 @@
     </button>
 	
 	  		<button id="fx" onclick="PlayStopFX()">
-        Play/Stop Backround Music
+        Play/Stop FX
     </button>
 	
 	
@@ -70,6 +84,15 @@
     <script type="text/javascript">
 	function HideShowGame() {
   var x = document.getElementById("gamecontainer");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+
+	function HideShowStart() {
+  var x = document.getElementById("Start");
   if (x.style.display === "none") {
     x.style.display = "block";
   } else {
@@ -145,7 +168,7 @@ function LoadWholeGame()
             script   [optional] - refers to a script in the scripts section, executed if it is touched.
 
             */
-
+ 
             keys: [
                 { id: 0, colour: '#333', solid: 0 },
                 { id: 1, colour: '#888', solid: 0 },
